--- a/src/less/header.less
+++ b/src/less/header.less
@@ -124,6 +124,9 @@ a{
         line-height:51px;
         height: 100%;
         margin-right: 32px;
+        &:hover{
+            color: #9f8052;
+        }
     }
 }
 .search{
