--- a/src/css/index.css
+++ b/src/css/index.css
@@ -154,6 +154,77 @@ a {
   line-height: 60px;
   margin-left: 25px;
 }
+.fixed-box {
+  width: 80px;
+  height: 446px;
+  background-color: #fff;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  right: 10px;
+  bottom: 50px ;
+}
+.fixed-box ul {
+  padding: 0px 5px;
+}
+.fixed-box ul li {
+  padding: 10px;
+  font-size: 12px;
+  text-align: center;
+  border-bottom: 1px solid #e7e7e7;
+  cursor: pointer;
+}
+.fixed-box ul li span {
+  color: #333;
+  font-size: 30px;
+}
+.fixed-box ul li p {
+  color: #333;
+  font-size: 12px;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+.foot-box {
+  width: 100%;
+  height: 45px;
+  margin-top: 60px;
+  padding: 45px 0;
+  line-height: 23px;
+  border-top: 1px solid #e7e7e7;
+  color: #666;
+}
+.foot-box > .cont {
+  width: 1080px;
+  height: 45px;
+  margin: 0px auto;
+}
+.foot-box > .cont > img:nth-child(1) {
+  float: left;
+  display: block;
+  width: 123px;
+  height: 45px;
+}
+.foot-box > .cont > img:nth-child(2) {
+  float: right;
+  display: block;
+  width: 100px;
+  height: 36px;
+}
+.foot-box > .cont > .text {
+  width: 683px;
+  height: 90px;
+  margin: 0 auto;
+  font-size: 12px;
+  color: #666;
+}
+.foot-box > .cont > .text > p > a {
+  color: #666;
+  padding: 0px 5px;
+}
+.foot-box > .cont > .text > p > a:hover {
+  color: goldenrod;
+}
 .banner-nav {
   width: 1080px;
   height: 358px;
@@ -482,16 +553,83 @@ a {
 .main-box > .container {
   width: 1080px;
   margin: 0 auto;
-  min-height: 404px ;
+  min-height: 404px;
   margin-bottom: 60px;
 }
-.main-box > .container .sp {
+.main-box > .container > .main {
+  width: 100%;
+  min-height: 348px ;
+}
+.main-box > .container > .main > div {
   float: left;
-  width: 260px;
+  width: 259px;
   height: 346px;
   border: 1px solid #e7e7e7;
   margin-right: 10px;
+  text-align: center;
+  transition: all 0.2s;
+  margin-top: 10px;
 }
-.main-box > .container .sp:nth-of-type(4n) {
-  margin-right: none;
+.main-box > .container > .main > div:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
+}
+.main-box > .container > .main > div:nth-of-type(4n) {
+  margin-right: 0px;
+}
+.main-box > .container > .main > div > div {
+  padding: 0px 35px 0px;
+}
+.main-box > .container > .main > div > div > img {
+  width: 195px;
+  height: 195px;
+}
+.main-box > .container > .main > div p {
+  color: #845f3f;
+  font-size: 16px;
+  line-height: 20px;
+  height: 20px;
+}
+.main-box > .container > .main .ft {
+  margin-top: 14px;
+  width: 100%;
+  height: 90px;
+  text-align: center;
+  padding: 13px 0 10px;
+  background: #f8f8f8;
+}
+.main-box > .container > .main .ft .d1 {
+  height: 20px;
+}
+.main-box > .container > .main .ft > .p1 {
+  color: #333;
+  margin-top: 10px;
+  font-size: 18px;
+  line-height: 22px;
+  height: 22px;
+}
+.main-box > .container > .main .ft .p2 {
+  margin-top: 11px;
+  margin-bottom: 0;
+  height: 22px;
+  line-height: 22px;
+  color: #a92112;
+}
+.s1 {
+  font-size: 13px;
+  line-height: 22px;
+  color: #a92112;
+}
+.s2 {
+  line-height: 22px;
+  color: #a92112;
+  font-size: 22px ;
+}
+.main-box:after {
+  content: "";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
 }
