--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,6 @@
 @import url("header.less");
+@import url("fixed.less");
+@import url("foot.less");
 .banner-nav{
     width: 1080px;
     height: 358px;
@@ -287,8 +289,8 @@
         margin-left: 20px;
         .sup-num{
             margin-right: 6px;
-    color: #a92112;
-    font-size: 18px;
+            color: #a92112;
+            font-size: 18px;
         }
     }
     .fl{
@@ -353,21 +355,88 @@
     >.container{
         width: 1080px;
         margin: 0 auto;
-        min-height:404px ;
+        min-height: 404px;
         margin-bottom: 60px;
-        .sp{
+        >.main{
+            width: 100%;
+            min-height:348px ;
+        >div{
             float: left;
-            width: 260px;
+            width: 259px;
             height: 346px;
             border: 1px solid #e7e7e7;
             margin-right: 10px;
-            &:nth-of-type(4n){
-                margin-right: none;
+            text-align: center;
+            transition: all 0.2s;
+            margin-top: 10px;
+            &:hover{
+                transform: translateY(-1px);
+                box-shadow: 0 0 18px rgba(0,0,0,.1);
             }
+            &:nth-of-type(4n){
+                margin-right:0px;
+            }
+            >div{
+                padding: 0px 35px 0px;
+                >img{
+                    width: 195px;
+                    height: 195px;
+                }
+            }
+            p{
+                color: #845f3f;
+                font-size: 16px;
+                line-height: 20px;
+                height: 20px;
+            }
+        }
+        .ft{
+            margin-top: 14px;
+            width: 100%;
+            height: 90px;
+            text-align: center;
+            padding: 13px 0 10px;
+              background: #f8f8f8;
+              .d1{
+                  height: 20px;
+              }
+              >.p1{
+                color: #333;
+                margin-top: 10px;
+                font-size: 18px;
+                line-height: 22px;
+                height: 22px;
+              }
+              .p2{
+                margin-top: 11px;
+                margin-bottom: 0;
+                height: 22px;
+                line-height: 22px;
+                color: #a92112;
+              }
+}
         }
     }
 }
 
+.s1{
+    font-size: 13px;
+    line-height: 22px;
+    color: #a92112;
+}
+.s2{
 
+    line-height: 22px;
+    color: #a92112;
+    font-size:22px ;
+}
 
+.main-box:after{
+	content: "";
+	display: block;
+	clear: both;
+ 	height:0;
+	overflow:hidden;
+	visibility:hidden;
+}
 
