--- a/src/less/fixed.less
+++ b/src/less/fixed.less
@@ -1,5 +1,6 @@
 //////////////////固定定位////////////////
 .fixed-box{
+    z-index: 10;
     width: 80px;
     height: 455px;
     background-color: #fff;
