--- a/src/less/header.less
+++ b/src/less/header.less
@@ -159,11 +159,7 @@ a{
         }
     }
  }
- .hide{
-    display: none;
-    position: relative;
-    top: 0px;
-}
+
  .icon-gouwuche{
   float: right;
   font-size:20px;
@@ -173,4 +169,11 @@ a{
 
  }
  
+}
+#hide{
+    position: relative;
+    top: 0px;
+    // display: none;
+    position: relative;
+    top: 0px;
 }
