--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,10 @@
 @import url("header.less");
 @import url("fixed.less");
 @import url("foot.less");
+.swiper-container2{
+    width: 1080px;
+    margin: 0 auto;
+}
 .banner-nav{
     width: 1080px;
     height: 358px;
@@ -46,6 +50,7 @@
     float: left;
     vertical-align: middle;
     margin-top: -4px;
+    margin: 0 auto;
 }
 }
 ///////////////containner/////////////////////
