--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -157,6 +157,10 @@ a {
   line-height: 60px;
   margin-left: 25px;
 }
+#hide {
+  position: relative;
+  top: 0px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -201,9 +205,17 @@ a {
 .foot-box > .cont > .text > p > a:hover {
   color: goldenrod;
 }
+.foot-box:after {
+  content: "";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
 .fixed-box {
   width: 80px;
-  height: 446px;
+  height: 455px;
   background-color: #fff;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
   position: fixed;
@@ -212,8 +224,10 @@ a {
 }
 .fixed-box ul {
   padding: 0px 5px;
+  height: 100%;
 }
 .fixed-box ul li {
+  height: 70px;
   padding: 10px;
   font-size: 12px;
   text-align: center;
@@ -228,7 +242,36 @@ a {
   color: #333;
   font-size: 12px;
 }
+.cheackred {
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -418px !important;
+}
+.allc {
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -418px !important;
+}
+.all {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin-left: 7px;
+  margin-right: 20px;
+  vertical-align: middle;
+  margin-top: -5px;
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -395px;
+}
+.red {
+  background-color: #d13a3a !important;
+}
 .cheack {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin-left: 7px;
+  margin-right: 20px;
+  vertical-align: middle;
+  margin-top: -5px;
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -395px;
+}
+.cheack2 {
   display: inline-block;
   width: 19px;
   height: 19px;
@@ -407,19 +450,27 @@ a {
   text-align: center;
   box-sizing: border-box;
   height: 32px;
-  width: 132px;
+  width: 135px;
   border: 1px solid #b3b3b3;
 }
 .cart-box .shangpin .cart-item .num > .edit a {
-  background: url(../images/yp-icons.7c45b9c9.png) 0 -1405px;
-  border-right: 1px solid #b3b3b3;
   display: inline-block;
-  float: left;
   vertical-align: middle;
   width: 30px;
   height: 30px;
 }
-.cart-box .shangpin .cart-item .num > .edit span {
+.cart-box .shangpin .cart-item .num > .edit > .reduce {
+  float: left;
+  border-right: 1px solid #b3b3b3;
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -1405px;
+}
+.cart-box .shangpin .cart-item .num > .edit > .add {
+  float: right;
+  background: url(../images/yp-icons.7c45b9c9.png) 0 -896px;
+}
+.cart-box .shangpin .cart-item .num > .edit > input {
+  outline: none;
+  border: none;
   float: left;
   border-right: 1px solid #b3b3b3;
   vertical-align: middle;
@@ -428,7 +479,7 @@ a {
   height: 30px;
   text-align: center;
 }
-.cart-box .shangpin .cart-item .num > .edit span > .text {
+.cart-box .shangpin .cart-item .num > .edit > input > .text {
   line-height: 30px;
   width: 100%;
   display: inline-block;
