--- a/src/less/cart.less
+++ b/src/less/cart.less
@@ -1,8 +1,36 @@
 @import url("header.less");
 @import url("foot.less");
 @import url("fixed.less");
+.cheackred{
+    background:url(../images/yp-icons.7c45b9c9.png)0 -418px !important;
+}
+.allc{
+    background:url(../images/yp-icons.7c45b9c9.png)0 -418px !important;
+}
+.all{
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    margin-left: 7px;
+    margin-right: 20px;
+    vertical-align: middle;
+    margin-top: -5px;
+    background:url(../images/yp-icons.7c45b9c9.png)0 -395px;
+}
+.red{
+    background-color: rgb(209, 58, 58)!important;
+}
 .cheack{
-        
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    margin-left: 7px;
+    margin-right: 20px;
+    vertical-align: middle;
+    margin-top: -5px;
+    background:url(../images/yp-icons.7c45b9c9.png)0 -395px;
+}
+.cheack2{
     display: inline-block;
     width: 19px;
     height: 19px;
@@ -189,19 +217,31 @@
                 text-align: center;
                 box-sizing: border-box;
                 height: 32px;
-                width: 132px;
+                width: 135px;
                 border: 1px solid #b3b3b3;
                 // overflow: hidden;
                 a{
-                    background:url(../images/yp-icons.7c45b9c9.png)0 -1405px;
-                    border-right: 1px solid #b3b3b3;
+                 
+                   
                     display: inline-block;
-                    float: left;
+          
                     vertical-align: middle;
-                     width: 30px;
+                    width: 30px;
                     height: 30px;
 }
-                span{
+                    >.reduce{
+                        float: left;
+                        border-right: 1px solid #b3b3b3;
+                        background:url(../images/yp-icons.7c45b9c9.png)0 -1405px;
+                    }
+                    >.add{
+                        float: right;
+                     
+                        background:url(../images/yp-icons.7c45b9c9.png)0 -896px;
+                    }
+                >input{
+                    outline: none;
+                    border: none;
                     float: left;
                     border-right: 1px solid #b3b3b3;
                     vertical-align: middle;
